# dolliop

./: README.md  workspace.code-workspace
backend/: .env  Cargo.toml  Rocket.toml
backend/migrations/2022-01-26-230530_create_lists/: up.sql
backend/migrations/2022-01-26-230532_create_users/: up.sql
backend/migrations/2022-01-26-230535_create_items/: up.sql
backend/migrations/2022-01-26-230539_create_entries/: up.sql
backend/migrations/2022-01-26-230544_create_users_to_lists/: down.sql  up.sql
backend/src/: auth.rs  errors.rs  items.rs  main.rs  schema.rs  users.rs  util.rs
frontend/: package-lock.json
