[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_mysql_pool"] }
dotenv = "0.15.0"
serde = "1.0.136"
diesel = { version = "1.4.8", features = ["mysql"] }
argon2 = "0.3.2"
